page.css
/* ... */
/*
 * Sélecteurs de couleurs
 */

#resultats {
  --preview-border-width: 4px;
}



/*
 * Résultats
 */

#resultats {
  grid-template-columns: auto 1fr;
}

#resultats [role="tablist"] {
  grid-column: 2;
  margin: auto;
  margin-left: 0;
}

#resultats h3 {
  grid-column: 1;
}

.donnees {
  grid-column: 1 / -1;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-items: stretch;
  flex-wrap: wrap;
  gap: calc(.5 * var(--section-padding));
}

@media (max-width: 672px) {
  .donnees:is(#results-named-formats, #results-color-spaces) {
    flex-direction: column;
    align-items: start;
  }
}

.donnees .format,
color-swatch {
  background-color: var(--frame-color);
  column-gap: calc(2 * var(--preview-border-width));
  padding: var(--preview-border-width);
  max-height: 2em;
  border-radius: var(--border-radius);
  --color-preview-width: 2em;
  --warning-color: var(--error-color);
}

color-swatch > .color-swatch-preview {
  border-radius: calc(.66 * var(--border-radius));
  box-shadow: inset 0 0 0 2px currentColor;
}

color-swatch > button {
  padding: var(--preview-border-width);
  border: none;
  border-radius: calc(.66 * var(--border-radius));
}

color-swatch > button:not(:hover, :focus, :active) {
  background: none;
}

.format {
  align-self: center;
  max-width: calc(100% - .6rem);
}

.format>pre[class*="language-"] {
  margin: 0;
}

#resultats:not([data-type="value"]) .donnees#results-values,
#resultats:not([data-type="multiple"]) .donnees#results-multiple,
#resultats:is([data-type="value"], [data-type="multiple"]) :is(
  #resultats > [is="tab-list"],
  .donnees#results-named-formats,
  .donnees#results-color-spaces
) {
  display: none;
}

#results-multiple {
  flex-direction: column;
  flex-wrap: nowrap;
  align-items: start;
}

.format.valeur code {
  white-space: normal;
}

[data-type*="value"][data-type*="gradient"] .format.valeur code {
  white-space: pre-wrap;
}



@media (max-width: 672px) {
  #saisie {
    grid-template-columns: 1fr;
    column-gap: 0;
  }

  #entree {
    grid-row: 2;
  }

  label[for=entree] {
    grid-column: 1;
  }

  .exemples-valeurs {
    grid-row: auto;
    grid-column: 1;
  }

  .only-pc {
    display: none;
  }
}

@media (min-width: 673px) {
  .only-mobile {
    display: none;
  }
}



/*
 * Blocs de code
 */

/* Code blocks */
pre[class*="language-"] {
	padding: .4em .5em;
	margin: 1em 0;
	overflow: auto;
	border: none;
	border-radius: calc(.83 * var(--border-radius));
	box-shadow: none;
}

/* Inline code */
:not(pre) > code[class*="language-"] {
	padding: .05em .2em;
	border-radius: calc(.5 * var(--border-radius));
	border: none;
	box-shadow: none;
	white-space: nowrap;
	margin: 0 1px;
}

:not(pre) > code[class*="language-"] {
  white-space: normal;
}


/* Sections not to display based on language and prog language */
/* (double attribute to increase specificity) */
html[lang="fr"] :not([data-lang])[lang="en"][lang="en"],
html[lang="en"] :not([data-lang])[lang="fr"][lang="fr"],
html[data-prog-language="js"] [data-prog-language="php"],
html[data-prog-language="php"] [data-prog-language="js"] {
  display: none;
}


/* Éléments cachés */
.off { display: none; }
[hidden] { display: none !important; }

tab-label:not(:defined),
color-swatch:not(:defined) {
  display: none;
}


/* If animations disabled */
@media (prefers-reduced-motion: reduce) {
  * {
    transition: none !important;
    animation: none !important;
  }
}

